--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "canvas-confetti": "^1.9.4",
+    "framer-motion": "^12.23.25",
     "react": "^19.2.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.2.1",
+    "react-howler": "^5.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
